<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/back_sign"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_gasto"
            android:icon="@drawable/plus_sign"
            android:title="@string/menu_add_gasto" />
        <item
            android:id="@+id/nav_edit_renda"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_edit_renda" />
        <item
            android:id="@+id/nav_cotacao"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_cotacao" />

    </group>

    <item
        android:id="@+id/btn_logout"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="onLogout"
        android:textColor="#666666"
        android:textSize="18sp"
        android:title="@string/logout" />

</menu>